--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -56,7 +56,7 @@ h3 {
 }
 
 h4 {
-	font-size: 24;
+	font-size: 24px;
 }
 
 .content {
@@ -194,10 +194,45 @@ a.nav-item:hover * {
 	font-size: 52px;
 }
 
+.content-img {
+	vertical-align: middle;
+}
+
+.content-header {
+	box-sizing: border-box;
+	margin: 0;
+}
+
+.content-header::before {
+	content: 'Когнитивные искажения';
+
+	display: block;
+	font: 24px/1.2 Neucha, cursive;
+	color: var(--dark-op);
+}
+
+.text-header {
+	padding: 5px 0 5px 10px;
+	margin: 100px 0 20px;
+
+	font: 700 14px/1.2 OpenSans, sans-serif;
+	text-transform: uppercase;
+	color: var(--white);
+	background-color: var(--brown);
+}
+
+.column-2 {
+	column-count: 2;
+	column-gap: 30px;
+}
+
+.column-2 p:nth-child(1) {
+	margin-top: 0;
+}
+
 .bg-black {
 	background-color: var(--main-dark);
 }
-
 
 .orange {
 	color: var(--orange);
