--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -211,6 +211,10 @@ a.nav-item:hover * {
 	color: var(--dark-op);
 }
 
+.content-header + p {
+	font: 34px/1.2 Neucha, cursive;
+}
+
 .text-header {
 	padding: 5px 0 5px 10px;
 	margin: 100px 0 20px;
