--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -85,7 +85,7 @@ h4 {
 	width: 100%;
 	height: 100%;
 
-	background-color: var(--white-op);
+	background-color: var(--dark-op);
 	background-image: url("../assets/images/background.png");
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -128,7 +128,7 @@ h4 {
 	display: inline-block;
 
 	padding: 12px 24px;
-	margin-top: 40px;
+	margin-top: 2em;
 
 	font: 700 16px/1.5 sans-serif;
 	text-decoration: none;
