--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -59,7 +59,7 @@ h4 {
 	font-size: 24px;
 }
 
-.content {
+.container {
 	position: relative;
 	width: 1110px;
 	padding: 100px 0;
@@ -68,7 +68,6 @@ h4 {
 
 .w-100 {
 	width: 100%;
-	height: 100%;
 }
 
 .bg-main {
