Fix video section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -135,23 +135,23 @@ h4 {
 	background-color: var(--orange);
 }
 
-.p-0 {
-	padding: 0;
-}
-
 .title-video-section {
 	position: relative;
-	top: 70px;
-	z-index: 2;
 	text-align: center;
+}
+
+.title-video-section h2 {
+	margin: 0;
+}
+
+.title-video-section p {
+	margin: 1.6em 0 30px;
 }
 
 .video {
 	position: relative;
-	top: 100px;
-	z-index: 1;
 	display: block;
-	margin: 0 auto;
+	margin: 0 auto -190px;
 	filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
 
