--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -160,13 +160,13 @@ nav.container {
 	justify-content: space-between;
 	flex-wrap: wrap;
 	column-gap: 30px;
-	row-gap: 30px;
+	row-gap: 20px;
 	padding-top: 200px;
 }
 
 .nav-item {
 	display: block;
-	flex: 0 1 31%;
+	flex: 0 1 350px;
 
 	box-sizing: border-box;
 
@@ -204,6 +204,14 @@ a.nav-item:hover * {
 .nav-item h2 {
 	margin: 0;
 	font-size: 52px;
+}
+
+a.nav-item h3 {
+	margin: 16px 0;
+}
+
+a.nav-item:nth-child(5) h3 {
+	margin: 12px 0;
 }
 
 .content-img {
