--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -107,6 +107,31 @@ h4 {
 	content: '';
 }
 
+.bg-dark {
+	position: relative;
+	background-color: var(--brown);
+}
+
+.bg-dark::before {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	display: block;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: var(--brown);
+	background-image: url("../assets/images/background.png");
+	background-size: cover;
+	background-repeat: no-repeat;
+
+	opacity: 0.1;
+
+	content: '';
+}
+
 .title {
 	position: relative;
 	width: 100%;
@@ -238,7 +263,7 @@ a.nav-item p {
 
 .content-header {
 	box-sizing: border-box;
-	margin: 0;
+	margin-bottom: 30px;
 }
 
 .content-header::before {
